// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Broccoli StyleLint Plugin Generated Tests when grouping is false generates correct failing test string 1`] = `
"QUnit.module('Stylelint');
QUnit.test('has-errors.scss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '1:15 Unexpected empty block (block-no-empty)\\\\n6:10 Expected \\\\\\\\\\"#000000\\\\\\\\\\" to be \\\\\\\\\\"black\\\\\\\\\\" (color-named)');
});
"
`;

exports[`Broccoli StyleLint Plugin Generated Tests when grouping is false generates correct passing test string 1`] = `
"QUnit.module('Stylelint');
QUnit.test('no-errors.scss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'no-errors.scss should pass stylelint');
});
"
`;

exports[`Broccoli StyleLint Plugin Generated Tests when grouping is true generates correct failing test string 1`] = `
"QUnit.module('Stylelint');

QUnit.test('has-errors.scss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '1:15 Unexpected empty block (block-no-empty)\\\\n6:10 Expected \\\\\\\\\\"#000000\\\\\\\\\\" to be \\\\\\\\\\"black\\\\\\\\\\" (color-named)');
});

QUnit.test('more-errors.scss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '1:15 Unexpected empty block (block-no-empty)\\\\n6:10 Expected \\\\\\\\\\"#000000\\\\\\\\\\" to be \\\\\\\\\\"black\\\\\\\\\\" (color-named)');
});



"
`;

exports[`Broccoli StyleLint Plugin Generated Tests when grouping is true generates correct passing test string 1`] = `
"QUnit.module('Stylelint');



QUnit.test('no-errors.scss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'no-errors.scss should pass stylelint');
});

QUnit.test('no-errors0.scss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'no-errors0.scss should pass stylelint');
});

"
`;

exports[`Broccoli StyleLint Plugin Generated Tests when using multiple languages generates error path tests for each language 1`] = `
"QUnit.module('Stylelint');

QUnit.test('style.css should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '1:15 Unexpected empty block (block-no-empty)\\\\n6:10 Expected \\\\\\\\\\"#000000\\\\\\\\\\" to be \\\\\\\\\\"black\\\\\\\\\\" (color-named)');
});

QUnit.test('style.html should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '3:19 Unexpected empty block (block-no-empty)\\\\n8:14 Expected \\\\\\\\\\"#000000\\\\\\\\\\" to be \\\\\\\\\\"black\\\\\\\\\\" (color-named)');
});

QUnit.test('style.less should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '1:15 Unexpected empty block (block-no-empty)\\\\n14:11 Unexpected unit \\\\\\\\\\"px\\\\\\\\\\" (unit-whitelist)\\\\n14:3 Unexpected unknown property \\\\\\\\\\"marign\\\\\\\\\\" (property-no-unknown)');
});

QUnit.test('style.sass should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '7:11 Unexpected unit \\\\\\\\\\"px\\\\\\\\\\" (unit-whitelist)\\\\n6:3 Unexpected unknown property \\\\\\\\\\"witdh\\\\\\\\\\" (property-no-unknown)');
});

QUnit.test('style.scss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '7:11 Unexpected unit \\\\\\\\\\"px\\\\\\\\\\" (unit-whitelist)');
});

QUnit.test('style.sss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(false, '6:15 Unexpected unit \\\\\\\\\\"px\\\\\\\\\\" (unit-whitelist)\\\\n8:3 Unexpected unknown property \\\\\\\\\\"colr\\\\\\\\\\" (property-no-unknown)');
});

"
`;

exports[`Broccoli StyleLint Plugin Generated Tests when using multiple languages generates happy path tests for each language 1`] = `
"QUnit.module('Stylelint');

QUnit.test('style.css should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'style.css should pass stylelint');
});

QUnit.test('style.html should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'style.html should pass stylelint');
});

QUnit.test('style.less should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'style.less should pass stylelint');
});

QUnit.test('style.sass should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'style.sass should pass stylelint');
});

QUnit.test('style.scss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'style.scss should pass stylelint');
});

QUnit.test('style.sss should pass stylelint', function(assert) {
  assert.expect(1);
  assert.ok(true, 'style.sss should pass stylelint');
});

"
`;
